force-app/main/default/objects/Session__c/fields/A_V_Form__c.field-meta.xml
<CustomField>
    <fullName>A_V_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has A/V form been received?</inlineHelpText>
    <label>A/V Form</label>
    <type>Checkbox</type>
</CustomField>