force-app/main/default/objects/Session__c/fields/All_Speakers_Identified__c.field-meta.xml
<CustomField>
    <fullName>All_Speakers_Identified__c</fullName>
    <label>All Speakers Identified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>