force-app/main/default/objects/Session__c/fields/Attended_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>Attended_Checked_In__c</fullName>
    <label>Attended/Checked In</label>
    <summaryFilterItems>
        <field>Session_Registration__c.Status__c</field>
        <operation>equals</operation>
        <value>Attended/Checked In</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Registration__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>