force-app/main/default/objects/Session__c/fields/Audio_Visual_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Audio_Visual_Requirements__c</fullName>
    <label>Audio/Visual Requirements</label>
    <type>TextArea</type>
</CustomField>