force-app/main/default/objects/Session__c/fields/Capacity_Notification__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Notification__c</fullName>
    <description>This field is used to send a notification when the capacity is close</description>
    <inlineHelpText>Enter the % at which you would like to send a notification to the below user.</inlineHelpText>
    <label>Capacity Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>