force-app/main/default/objects/Session__c/fields/Capacity_Session_Full__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Session_Full__c</fullName>
    <formula>Registered_Session__c / Maximum_Registration_Session__c</formula>
    <label>Capacity Full</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>