force-app/main/default/objects/Session__c/fields/Did_Not_Attend__c.field-meta.xml
<CustomField>
    <fullName>Did_Not_Attend__c</fullName>
    <label>Did Not Attend</label>
    <summaryFilterItems>
        <field>Session_Registration__c.Status__c</field>
        <operation>equals</operation>
        <value>Did Not Attend</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Registration__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>