force-app/main/default/objects/Session__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>This field is used to record the duration of the session</description>
    <inlineHelpText>Please enter the appropriate duration for this session</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>