force-app/main/default/objects/Session__c/fields/Dynamic_Pick_List_Title__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Pick_List_Title__c</fullName>
    <description>This field is used to display &apos;Session Display name&apos; &amp; &apos;Primary Subject Area Interest&apos;</description>
    <formula>Session_Display_Name__c  + &apos; &amp; &apos; +  TEXT(Primary_Subject_Area_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to display &apos;Session Display name&apos; &amp; &apos;Primary Subject Area Interest&apos;</inlineHelpText>
    <label>Dynamic Pick List Title</label>
    <type>Text</type>
</CustomField>