force-app/main/default/objects/Session__c/fields/Enable_Waiting_List_on_Closed__c.field-meta.xml
<CustomField>
    <fullName>Enable_Waiting_List_on_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Waiting List on Closed</label>
    <type>Checkbox</type>
</CustomField>