force-app/main/default/objects/Session__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The end time of a session</description>
    <label>Session End Time</label>
    <type>Time</type>
</CustomField>