force-app/main/default/objects/Session__c/fields/Faculty_Department__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Department__c</fullName>
    <description>This field is used to store Faculty / Department information for this Session object</description>
    <inlineHelpText>Please choose appropriate Faculty / Department information</inlineHelpText>
    <label>Faculty / Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Faculty_Department</valueSetName>
    </valueSet>
</CustomField>