force-app/main/default/objects/Session__c/fields/Final_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Booking_Date__c</fullName>
    <description>This field is used to determine the final booking date for this registration</description>
    <inlineHelpText>Please choose a valid date</inlineHelpText>
    <label>Final Booking Date</label>
    <type>Date</type>
</CustomField>