force-app/main/default/objects/Session__c/fields/Include_in_Dynamic_Session_Field__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Dynamic_Session_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether this session can be included in the Dynamic Session field to denote as a primary session when registering for the event.</description>
    <inlineHelpText>This field is used to indicate whether this session can be included in the Dynamic Session field to denote as a primary session when registering for the event.</inlineHelpText>
    <label>Include in Dynamic Session Field</label>
    <type>Checkbox</type>
</CustomField>