force-app/main/default/objects/Session__c/fields/Map_to_Venue__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Venue__c</fullName>
    <formula>Venue__r.Map_to_Venue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map to Venue</label>
    <type>Text</type>
</CustomField>