force-app/main/default/objects/Session__c/fields/Maximum_Registration__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Registration__c</fullName>
    <inlineHelpText>Enter Maximum Registration # allowed for this session.</inlineHelpText>
    <label>Maximum Registration #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>