force-app/main/default/objects/Session__c/fields/Maximum_Registration_Session__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Registration_Session__c</fullName>
    <inlineHelpText>The maximum number of registrations for this session. NOTE: Cannot be more than the maximum venue capacity.</inlineHelpText>
    <label>Maximum Session Registration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>