force-app/main/default/objects/Session__c/fields/of_Survey_Responses__c.field-meta.xml
<CustomField>
    <fullName>of_Survey_Responses__c</fullName>
    <label># of Survey Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>