force-app/main/default/objects/Session__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the Event Session</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>