force-app/main/default/objects/Session__c/fields/Primary_Subject_Area_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subject_Area_Interest__c</fullName>
    <description>This field is used to store the Primary Subject Area for this Session</description>
    <inlineHelpText>Please choose an appropriate subject area for this Session</inlineHelpText>
    <label>Primary Subject Area Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Course_Options</valueSetName>
    </valueSet>
</CustomField>