force-app/main/default/objects/Session__c/fields/Publish_to_Web__c.field-meta.xml
<CustomField>
    <fullName>Publish_to_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be used for web integrations if you wish to publish data in Salesforce to your website.</description>
    <label>Publish to Web?</label>
    <type>Checkbox</type>
</CustomField>