force-app/main/default/objects/Session__c/fields/Registered_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Registered_Attendees__c</fullName>
    <description>Running total of Event Registrations for this Session</description>
    <label>Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>