force-app/main/default/objects/Session__c/fields/Registered_Session__c.field-meta.xml
<CustomField>
    <fullName>Registered_Session__c</fullName>
    <label>Registered</label>
    <summaryFilterItems>
        <field>Session_Registration__c.Status__c</field>
        <operation>equals</operation>
        <value>Attending, Checked In, Did Not Attend, Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Registration__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>