force-app/main/default/objects/Session__c/fields/Registration_Closed__c.field-meta.xml
<CustomField>
    <fullName>Registration_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine whether the registration is closed or not</description>
    <inlineHelpText>Please check if you want to close this registration</inlineHelpText>
    <label>Registration Closed</label>
    <type>Checkbox</type>
</CustomField>