force-app/main/default/objects/Session__c/fields/Registrations_Available__c.field-meta.xml
<CustomField>
    <fullName>Registrations_Available__c</fullName>
    <formula>ABS(Maximum_Registration_Session__c -  Registered_Session__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrations Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>