force-app/main/default/objects/Session__c/fields/Session_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Session_Abstract__c</fullName>
    <inlineHelpText>This description is shown to prospective attendees on the Session Registration UI</inlineHelpText>
    <label>Session Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>