force-app/main/default/objects/Session__c/fields/Session_Code__c.field-meta.xml
<CustomField>
    <fullName>Session_Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>An internal reference for the Session. May or may not be used</inlineHelpText>
    <label>Session Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>