force-app/main/default/objects/Session__c/fields/Session_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Display_Name__c</fullName>
    <description>This field is used to store the Session Display</description>
    <inlineHelpText>The Session Display name is shown to prospective attendees via Session Registration UI &amp; also on the dynamic session picklist</inlineHelpText>
    <label>Session Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>