force-app/main/default/objects/Session__c/fields/Session_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Date__c</fullName>
    <description>This field is used to record the session end date</description>
    <inlineHelpText>Please choose an appropriate end date for this session</inlineHelpText>
    <label>Session End Date</label>
    <type>Date</type>
</CustomField>