force-app/main/default/objects/Session__c/fields/Session_Rating__c.field-meta.xml
<CustomField>
    <fullName>Session_Rating__c</fullName>
    <inlineHelpText>Enter session evaluation score (1-5, with 5 as the highest) - if applicable</inlineHelpText>
    <label>Session Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>