force-app/main/default/objects/Session__c/fields/Session_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Date__c</fullName>
    <description>Session Start Date</description>
    <inlineHelpText>Session Start Date</inlineHelpText>
    <label>Session Start Date</label>
    <type>Date</type>
</CustomField>