force-app/main/default/objects/Session__c/fields/Sponsored__c.field-meta.xml
<CustomField>
    <fullName>Sponsored__c</fullName>
    <label>Sponsored?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>