force-app/main/default/objects/Session__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The start time of a session</description>
    <label>Session Start Time</label>
    <type>Time</type>
</CustomField>