force-app/main/default/objects/Session__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <description>This field must match the Eventbrite registration form for Event Registrations to be associated to the correct Session (e.g. AM, PM, 1pm - 4pm, etc.)</description>
    <inlineHelpText>This Time Slot field must match the Eventbrite registration form (e.g. AM, PM, 1pm - 4pm, etc.)</inlineHelpText>
    <label>Time Slot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>