force-app/main/default/objects/Session__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>This field is used to identify the time zone for the session dates</description>
    <inlineHelpText>Please enter the appropriate timezone for the dates entered</inlineHelpText>
    <label>Timezone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>