force-app/main/default/objects/Session__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Track</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Track__c.Event__c</field>
            <operation>equals</operation>
            <valueField>$Source.Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Track__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>