force-app/main/default/objects/Session__c/fields/User_Notification__c.field-meta.xml
<CustomField>
    <fullName>User_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used to store the user who needs to be notified when the capacity limit is reached</description>
    <inlineHelpText>The recipient of the capacity notification message</inlineHelpText>
    <label>User Notification</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NotificationSessions</relationshipName>
    <type>Lookup</type>
</CustomField>