force-app/main/default/objects/Session__c/fields/Venue_City__c.field-meta.xml
<CustomField>
    <fullName>Venue_City__c</fullName>
    <formula>Venue__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue City</label>
    <type>Text</type>
</CustomField>