force-app/main/default/objects/Session__c/fields/Venue_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Venue_Postal_Code__c</fullName>
    <formula>Venue__r.Postal_Code_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Postal Code</label>
    <type>Text</type>
</CustomField>