force-app/main/default/objects/Session__c/fields/Venue_Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Venue_Street_Address_1__c</fullName>
    <formula>Venue__r.Street_Address_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Street Address 1</label>
    <type>Text</type>
</CustomField>