force-app/main/default/objects/Session__c/fields/Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>Waiting_List__c</fullName>
    <description>Count of Session Registration in Waiting List Status.</description>
    <label>Waiting List</label>
    <summaryFilterItems>
        <field>Session_Registration__c.Status__c</field>
        <operation>equals</operation>
        <value>Waiting List</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Registration__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>