force-app/main/default/objects/Session__c/fields/Waiting_List_Available__c.field-meta.xml
<CustomField>
    <fullName>Waiting_List_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting List Available</label>
    <type>Checkbox</type>
</CustomField>