force-app/main/default/objects/Session__c/validationRules/Restrict_Maximum_Registrations.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Maximum_Registrations</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Registration_Session__c  &gt;  Maximum_Venue_Capacity__c</errorConditionFormula>
    <errorMessage>Maximum Session Registrations cannot exceed the Maximum Venue Capacity</errorMessage>
</ValidationRule>