force-app/main/default/objects/Session__c/validationRules/Session_Does_Not_Have_Owner_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Does_Not_Have_Owner_Assigned</fullName>
    <active>true</active>
    <description>The session does not have an owner associated</description>
    <errorConditionFormula>ISBLANK(Owner__c)</errorConditionFormula>
    <errorDisplayField>Owner__c</errorDisplayField>
    <errorMessage>Please assign an Owner to the Session</errorMessage>
</ValidationRule>