force-app/main/default/objects/Session__c/validationRules/Start_Date_Greater_Than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Greater_Than_End_Date</fullName>
    <active>true</active>
    <description>Session End date and time should not be before the Session Start date and time</description>
    <errorConditionFormula>IF(Session_End_Date__c  == Session_Start_Date__c,
End_Time__c  &lt; Start_Time__c,
Session_End_Date__c &lt; Session_Start_Date__c )</errorConditionFormula>
    <errorMessage>Session End date and time should not be before the Session Start date and time</errorMessage>
</ValidationRule>