force-app/main/default/objects/Session__c/validationRules/Start_End_Date_Outside_Event_Date_Ranges.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Date_Outside_Event_Date_Ranges</fullName>
    <active>true</active>
    <description>Session Start date and end date should be within or equal to Event start date and Event End Date</description>
    <errorConditionFormula>IF(
  OR(
    Session_Start_Date__c &lt; Event__r.Event_Start_Date__c,
    Session_Start_Date__c &gt; Event__r.Event_End_Date__c,
    Session_End_Date__c &gt;  Event__r.Event_End_Date__c,
    Session_End_Date__c &lt;  Event__r.Event_Start_Date__c
  ),
  true,
  OR(
    AND(
      Session_Start_Date__c == Event__r.Event_Start_Date__c, 
      Start_Time__c &lt; Event__r.Start_Time__c
    ),
    AND(
      Session_End_Date__c == Event__r.Event_End_Date__c,
      End_Time__c &gt; Event__r.End_Time__c 
    )
  )
)</errorConditionFormula>
    <errorMessage>Session Start / End Date &amp; Time should not be outside the Event Start / End Date &amp; Time range</errorMessage>
</ValidationRule>