force-app/main/default/objects/Session__c/validationRules/Validate_Final_Booking_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Final_Booking_Date</fullName>
    <active>true</active>
    <description>Final Booking Date Cannot Be Greater Than Session End Date</description>
    <errorConditionFormula>Final_Booking_Date__c &gt; Session_End_Date__c</errorConditionFormula>
    <errorMessage>Final Booking Date cannot be greater than the Session End Date</errorMessage>
</ValidationRule>